--- a/environments/py-3.12-win-64.conda.lock.yml
+++ b/environments/py-3.12-win-64.conda.lock.yml
@@ -30,7 +30,7 @@ dependencies:
   - discretize=0.11.3=py312hbaa7e33_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.5=py312h05f76fc_0
+  - fonttools=4.59.0=py312h05f76fc_0
   - freetype=2.13.3=h57928b3_1
   - fsspec=2025.7.0=pyhd8ed1ab_0
   - geoana=0.7.2=py312hbaa7e33_0
@@ -56,7 +56,7 @@ dependencies:
   - libcurl=8.14.1=h88aaa65_0
   - libdeflate=1.24=h76ddb4d_0
   - libdlf=0.3.0=pyhd8ed1ab_1
-  - libexpat=2.7.0=he0c23c2_0
+  - libexpat=2.7.1=hac47afa_0
   - libffi=3.4.6=h537db12_1
   - libfreetype=2.13.3=h57928b3_1
   - libfreetype6=2.13.3=h0b5ce68_1
