--- a/environments/py-3.12-linux-64.conda.lock.yml
+++ b/environments/py-3.12-linux-64.conda.lock.yml
@@ -31,7 +31,7 @@ dependencies:
   - discretize=0.11.3=py312hc39e661_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.5=py312h178313f_0
+  - fonttools=4.59.0=py312h8a5da7c_0
   - freetype=2.13.3=ha770c72_1
   - fsspec=2025.7.0=pyhd8ed1ab_0
   - geoana=0.7.2=py312hc39e661_0
@@ -61,7 +61,7 @@ dependencies:
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libev=4.33=hd590300_2
-  - libexpat=2.7.0=h5888daf_0
+  - libexpat=2.7.1=hecca717_0
   - libffi=3.4.6=h2dba641_1
   - libfreetype=2.13.3=ha770c72_1
   - libfreetype6=2.13.3=h48d6fc4_1
