Split code docs and remove from build

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,6 +77,7 @@ repos:
     -   id: check-toml
     -   id: check-yaml
     -   id: check-added-large-files
+        exclude: (\.ipynb)$
     -   id: check-case-conflict
     -   id: check-merge-conflict
     -   id: debug-statements
