--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -14,10 +14,10 @@ dependencies:
   - brotli-bin=1.1.0=h2466b09_3
   - brotli-python=1.1.0=py310h9e98ed7_3
   - bzip2=1.0.8=h2466b09_7
-  - ca-certificates=2025.6.15=h4c7d964_0
+  - ca-certificates=2025.7.14=h4c7d964_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.6.15=pyhd8ed1ab_0
+  - certifi=2025.7.14=pyhd8ed1ab_0
   - cffi=1.17.1=py310ha8f682b_0
   - click=8.2.1=pyh7428d3b_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
@@ -29,20 +29,20 @@ dependencies:
   - discretize=0.11.3=py310h3e8ed56_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.4=py310h38315fa_0
+  - fonttools=4.59.0=py310hdb0e946_0
   - freetype=2.13.3=h57928b3_1
-  - fsspec=2025.5.1=pyhd8ed1ab_0
+  - fsspec=2025.7.0=pyhd8ed1ab_0
   - geoana=0.7.2=py310h3e8ed56_0
   - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.14.0=nompi_py310h877c39c_100
-  - hdf5=1.14.6=nompi_hd5d9e70_101
+  - hdf5=1.14.6=nompi_he30205f_102
   - hpack=4.1.0=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - importlib-metadata=8.7.0=pyhe01879c_1
   - intel-openmp=2024.2.1=h57928b3_1083
   - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.5.1=pyhd8ed1ab_0
-  - kiwisolver=1.4.7=py310hc19bc0b_0
+  - kiwisolver=1.4.8=py310he9f1925_1
   - krb5=1.21.3=hdf4eb48_0
   - lcms2=2.17=hbcf6048_0
   - lerc=4.0.0=h6470a55_1
@@ -55,28 +55,28 @@ dependencies:
   - libcurl=8.14.1=h88aaa65_0
   - libdeflate=1.24=h76ddb4d_0
   - libdlf=0.3.0=pyhd8ed1ab_1
-  - libexpat=2.7.0=he0c23c2_0
+  - libexpat=2.7.1=hac47afa_0
   - libffi=3.4.6=h537db12_1
   - libfreetype=2.13.3=h57928b3_1
   - libfreetype6=2.13.3=h0b5ce68_1
   - libgcc=15.1.0=h1383e82_3
   - libgomp=15.1.0=h1383e82_3
-  - libhwloc=2.11.2=default_ha69328c_1001
+  - libhwloc=2.11.2=default_h88281d1_1002
   - libiconv=1.18=h135ad9c_1
   - libjpeg-turbo=3.1.0=h2466b09_0
   - liblapack=3.9.0=32_h1aa476e_mkl
   - liblzma=5.8.1=h2466b09_2
-  - libpng=1.6.49=h7a4582a_0
+  - libpng=1.6.50=h95bef1e_0
   - libspatialindex=2.0.0=h5a68840_0
-  - libsqlite=3.50.1=hf5d6505_7
+  - libsqlite=3.50.3=hf5d6505_1
   - libssh2=1.11.1=h9aa295b_0
   - libtiff=4.7.0=h05922d8_5
-  - libwebp-base=1.5.0=h3b0e114_0
+  - libwebp-base=1.6.0=h4d5522a_0
   - libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_9
   - libxcb=1.17.0=h0e4246c_0
   - libxml2=2.13.8=h442d1da_0
   - libzlib=1.3.1=h2466b09_2
-  - llvm-openmp=20.1.7=h30eaf37_0
+  - llvm-openmp=20.1.8=hfa2b4ca_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py310h38315fa_1
   - matplotlib-base=3.8.4=py310hadb10a8_2
@@ -87,9 +87,9 @@ dependencies:
   - numcodecs=0.13.1=py310hb4db72f_0
   - numpy=1.26.4=py310hf667824_0
   - openjpeg=2.5.3=h4d64b90_0
-  - openssl=3.5.0=ha4e3fda_1
+  - openssl=3.5.1=h725018a_0
   - packaging=25.0=pyh29332c3_1
-  - pandas=2.3.0=py310hb4db72f_0
+  - pandas=2.3.1=py310hed136d8_0
   - partd=1.4.2=pyhd8ed1ab_0
   - pillow=10.3.0=py310h3e38d90_1
   - pip=25.1.1=pyh8b19718_0
@@ -103,17 +103,17 @@ dependencies:
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyh09c184e_7
   - python=3.10.18=h8c5b53a_0_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-mumps=0.0.3=py310hb64895d_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.10=7_cp310
+  - python_abi=3.10=8_cp310
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py310h38315fa_2
   - rtree=1.2.0=py310h08d5ad2_1
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.1=py310hbd0dde3_2
   - setuptools=80.9.0=pyhff2d567_0
-  - six=1.17.0=pyhd8ed1ab_0
+  - six=1.17.0=pyhe01879c_1
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=h62715c5_1
   - tblib=3.1.0=pyhd8ed1ab_0
@@ -123,16 +123,16 @@ dependencies:
   - tornado=6.5.1=py310ha8f682b_0
   - tqdm=4.67.1=pyhd8ed1ab_1
   - trimesh=4.1.8=pyhd8ed1ab_0
-  - typing-extensions=4.14.0=h32cad80_0
+  - typing-extensions=4.14.1=h4440ef1_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.14.0=pyhe01879c_0
+  - typing_extensions=4.14.1=pyhe01879c_0
   - tzdata=2025b=h78e105d_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=16.0.0=py310ha8f682b_0
   - urllib3=2.5.0=pyhd8ed1ab_0
-  - vc=14.3=h41ae7f8_26
-  - vc14_runtime=14.44.35208=h818238b_26
-  - vs2015_runtime=14.44.35208=h38c0c73_26
+  - vc=14.3=h2b53caa_30
+  - vc14_runtime=14.44.35208=h818238b_30
+  - vs2015_runtime=14.44.35208=h38c0c73_30
   - wheel=0.45.1=pyhd8ed1ab_1
   - win_inet_pton=1.1.0=pyh7428d3b_8
   - xorg-libxau=1.0.12=h0e40799_0
@@ -145,9 +145,9 @@ dependencies:
   - zstandard=0.23.0=py310ha8f682b_2
   - zstd=1.5.7=hbeecb71_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ea323dc1e48634a19cca2b2693f989fae08880f1
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99695a5e34812bfbb53cef84803033a91af137de
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@c64e2db54bfdacc19ef675a7d54288aaad8b78a8
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@af2991b847a1bf42194575874fc4fb1efe1e8ab1
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@86e22e6fa457859d494d94552e6431728e513d7a
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
