--- a/environments/py-3.11-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.11-linux-64-dev.conda.lock.yml
@@ -15,7 +15,7 @@ dependencies:
   - argon2-cffi-bindings=21.2.0=py311h9ecbd09_5
   - arrow=1.3.0=pyhd8ed1ab_1
   - asciitree=0.3.3=py_2
-  - astroid=3.3.10=py311h38be061_0
+  - astroid=3.3.11=py311h38be061_0
   - asttokens=3.0.0=pyhd8ed1ab_1
   - async-lru=2.0.5=pyh29332c3_0
   - attrs=25.3.0=pyh71513ae_0
@@ -29,10 +29,10 @@ dependencies:
   - brotli-python=1.1.0=py311hfdbb021_3
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.5=hb9d3cd8_0
-  - ca-certificates=2025.6.15=hbd8a1cb_0
+  - ca-certificates=2025.7.14=hbd8a1cb_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.6.15=pyhd8ed1ab_0
+  - certifi=2025.7.14=pyhd8ed1ab_0
   - cffi=1.17.1=py311hf29c0ef_0
   - charset-normalizer=3.4.2=pyhd8ed1ab_0
   - click=8.2.1=pyh707e725_0
@@ -40,12 +40,12 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.2=py311hd18a35c_0
-  - coverage=7.9.1=py311h2dc5d0c_0
+  - coverage=7.9.2=py311h2dc5d0c_0
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py311h9ecbd09_0
   - dask-core=2025.3.0=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - debugpy=1.8.14=py311hfdbb021_0
+  - debugpy=1.8.15=py311hc665b79_0
   - decorator=5.2.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - deprecated=1.2.18=pyhd8ed1ab_0
@@ -56,16 +56,16 @@ dependencies:
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - executing=2.2.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.4=py311h2dc5d0c_0
+  - fonttools=4.59.0=py311h3778330_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.13.3=ha770c72_1
-  - fsspec=2025.5.1=pyhd8ed1ab_0
+  - fsspec=2025.7.0=pyhd8ed1ab_0
   - geoana=0.7.2=py311h5b7b71f_0
   - greenlet=3.2.3=py311hfdbb021_0
   - h11=0.16.0=pyhd8ed1ab_0
   - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.14.0=nompi_py311h7f87ba5_100
-  - hdf5=1.14.6=nompi_h2d575fe_101
+  - hdf5=1.14.6=nompi_h6e4c0c1_102
   - hpack=4.1.0=pyhd8ed1ab_0
   - httpcore=1.0.9=pyh29332c3_0
   - httpx=0.28.1=pyhd8ed1ab_0
@@ -75,10 +75,9 @@ dependencies:
   - imagesize=1.4.1=pyhd8ed1ab_0
   - importlib-metadata=8.7.0=pyhe01879c_1
   - importlib_metadata=8.7.0=h40b2b14_1
-  - importlib_resources=6.5.2=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_1
   - ipykernel=6.29.5=pyh3099207_0
-  - ipython=9.3.0=pyhfa0c392_0
+  - ipython=9.4.0=pyhfa0c392_0
   - ipython_genutils=0.2.0=pyhd8ed1ab_2
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=7.8.5=pyhd8ed1ab_0
@@ -89,28 +88,29 @@ dependencies:
   - joblib=1.5.1=pyhd8ed1ab_0
   - json5=0.12.0=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py311h38be061_1
-  - jsonschema=4.24.0=pyhd8ed1ab_0
+  - jsonschema=4.25.0=pyhe01879c_0
   - jsonschema-specifications=2025.4.1=pyh29332c3_0
-  - jsonschema-with-format-nongpl=4.24.0=hd8ed1ab_0
+  - jsonschema-with-format-nongpl=4.25.0=he01879c_0
   - jupyter-book=1.0.3=pyhd8ed1ab_1
   - jupyter-cache=1.0.1=pyhff2d567_0
-  - jupyter-lsp=2.2.5=pyhe01879c_2
+  - jupyter-lsp=2.2.6=pyhe01879c_0
   - jupyter_client=8.6.3=pyhd8ed1ab_1
   - jupyter_core=5.8.1=pyh31011fe_0
   - jupyter_events=0.12.0=pyh29332c3_0
   - jupyter_server=2.16.0=pyhe01879c_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.4.3=pyhd8ed1ab_0
+  - jupyterlab=4.4.5=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
   - jupytext=1.17.2=pyh80e38bb_0
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.7=py311hd18a35c_0
+  - kiwisolver=1.4.8=py311hd18a35c_1
   - krb5=1.21.3=h659f571_0
+  - lark=1.2.2=pyhd8ed1ab_1
   - latexcodec=2.0.1=pyh9f0ad1d_0
   - lcms2=2.17=h717163a_0
-  - ld_impl_linux-64=2.43=h1423503_5
+  - ld_impl_linux-64=2.44=h1423503_1
   - lerc=4.0.0=h0aef613_1
   - libaec=1.1.4=h3f801dc_0
   - libblas=3.9.0=32_hfdb39a5_mkl
@@ -123,7 +123,7 @@ dependencies:
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libev=4.33=hd590300_2
-  - libexpat=2.7.0=h5888daf_0
+  - libexpat=2.7.1=hecca717_0
   - libffi=3.4.6=h2dba641_1
   - libfreetype=2.13.3=ha770c72_1
   - libfreetype6=2.13.3=h48d6fc4_1
@@ -131,30 +131,30 @@ dependencies:
   - libgcc-ng=15.1.0=h69a702a_3
   - libgfortran=15.1.0=h69a702a_3
   - libgfortran5=15.1.0=hcea5267_3
-  - libhwloc=2.11.2=default_h0d58e46_1001
+  - libhwloc=2.11.2=default_h3d81e11_1002
   - libiconv=1.18=h4ce23a2_1
   - libjpeg-turbo=3.1.0=hb9d3cd8_0
   - liblapack=3.9.0=32_hc41d3b0_mkl
   - liblzma=5.8.1=hb9d3cd8_2
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hb9d3cd8_1
-  - libpng=1.6.49=h943b412_0
+  - libpng=1.6.50=h943b412_0
   - libscotch=7.0.6=hea33c07_1
   - libsodium=1.0.20=h4ab18f5_0
   - libspatialindex=2.0.0=he02047a_0
-  - libsqlite=3.50.1=h6cd9bfd_7
+  - libsqlite=3.50.3=hee844dc_1
   - libssh2=1.11.1=hcf80075_0
   - libstdcxx=15.1.0=h8f9b012_3
   - libstdcxx-ng=15.1.0=h4852527_3
   - libtiff=4.7.0=hf01ce69_5
   - libuuid=2.38.1=h0b41bf4_0
-  - libwebp-base=1.5.0=h851e524_0
+  - libwebp-base=1.6.0=hd42ef1d_0
   - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.13.8=h4bc477f_0
   - libzlib=1.3.1=hb9d3cd8_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=20.1.7=h024ca30_0
+  - llvm-openmp=20.1.8=h4922eb0_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py311h2dc5d0c_1
@@ -170,7 +170,7 @@ dependencies:
   - mumps-include=5.7.3=h82cca05_10
   - mumps-seq=5.7.3=h06cbf8f_10
   - munkres=1.1.4=pyhd8ed1ab_1
-  - myst-nb=1.2.0=pyh29332c3_0
+  - myst-nb=1.3.0=pyhe01879c_0
   - myst-parser=1.0.0=pyhd8ed1ab_0
   - nbclient=0.10.2=pyhd8ed1ab_0
   - nbconvert=7.16.6=hb482800_0
@@ -179,15 +179,15 @@ dependencies:
   - nbformat=5.10.4=pyhd8ed1ab_1
   - ncurses=6.5=h2d0b736_3
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - notebook=7.4.3=pyhd8ed1ab_0
+  - notebook=7.4.4=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numcodecs=0.15.1=py311h7db5c69_0
   - numpy=1.26.4=py311h64a7726_0
   - openjpeg=2.5.3=h5fbd93e_0
-  - openssl=3.5.0=h7b32b05_1
+  - openssl=3.5.1=h7b32b05_0
   - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=25.0=pyh29332c3_1
-  - pandas=2.3.0=py311h7db5c69_0
+  - pandas=2.3.1=py311hed34c8f_0
   - pandoc=3.7.0.2=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_1
@@ -196,7 +196,6 @@ dependencies:
   - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py311h82a398c_1
   - pip=25.1.1=pyh8b19718_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.8=pyhe01879c_0
   - pluggy=1.6.0=pyhd8ed1ab_0
   - prometheus_client=0.22.1=pyhd8ed1ab_0
@@ -220,12 +219,12 @@ dependencies:
   - pytest=8.4.1=pyhd8ed1ab_0
   - pytest-cov=6.2.1=pyhd8ed1ab_0
   - python=3.11.13=h9e4cc4f_0_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-mumps=0.0.3=py311h4b558b0_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.11=7_cp311
+  - python_abi=3.11=8_cp311
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py311h2dc5d0c_2
   - pyzmq=27.0.0=py311h7deb3e3_0
@@ -235,13 +234,14 @@ dependencies:
   - requests=2.32.4=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_1
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.25.1=py311hdae7d1d_0
+  - rfc3987-syntax=1.1.0=pyhe01879c_1
+  - rpds-py=0.26.0=py311hdae7d1d_0
   - rtree=1.2.0=py311ha1603b9_1
   - scikit-learn=1.4.2=py311he08f58d_1
   - scipy=1.14.1=py311he9a78e4_2
   - send2trash=1.8.3=pyh0d859eb_1
   - setuptools=80.9.0=pyhff2d567_0
-  - six=1.17.0=pyhd8ed1ab_0
+  - six=1.17.0=pyhe01879c_1
   - sniffio=1.3.1=pyhd8ed1ab_1
   - snowballstemmer=3.0.1=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
@@ -280,10 +280,10 @@ dependencies:
   - tqdm=4.67.1=pyhd8ed1ab_1
   - traitlets=5.14.3=pyhd8ed1ab_1
   - trimesh=4.1.8=pyhd8ed1ab_0
-  - types-python-dateutil=2.9.0.20250516=pyhd8ed1ab_0
-  - typing-extensions=4.14.0=h32cad80_0
+  - types-python-dateutil=2.9.0.20250708=pyhd8ed1ab_0
+  - typing-extensions=4.14.1=h4440ef1_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.14.0=pyhe01879c_0
+  - typing_extensions=4.14.1=pyhe01879c_0
   - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2025b=h78e105d_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_1
@@ -308,9 +308,9 @@ dependencies:
   - zstandard=0.23.0=py311h9ecbd09_2
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ea323dc1e48634a19cca2b2693f989fae08880f1
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99695a5e34812bfbb53cef84803033a91af137de
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@c64e2db54bfdacc19ef675a7d54288aaad8b78a8
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@af2991b847a1bf42194575874fc4fb1efe1e8ab1
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@86e22e6fa457859d494d94552e6431728e513d7a
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
