--- a/environments/py-3.12-linux-64.conda.lock.yml
+++ b/environments/py-3.12-linux-64.conda.lock.yml
@@ -15,10 +15,10 @@ dependencies:
   - brotli-python=1.1.0=py312h2ec8cdc_3
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.5=hb9d3cd8_0
-  - ca-certificates=2025.6.15=hbd8a1cb_0
+  - ca-certificates=2025.7.14=hbd8a1cb_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.6.15=pyhd8ed1ab_0
+  - certifi=2025.7.14=pyhd8ed1ab_0
   - cffi=1.17.1=py312h06ac9bb_0
   - click=8.2.1=pyh707e725_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
@@ -31,13 +31,13 @@ dependencies:
   - discretize=0.11.3=py312hc39e661_0
   - distributed=2025.3.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.58.4=py312h178313f_0
+  - fonttools=4.59.0=py312h8a5da7c_0
   - freetype=2.13.3=ha770c72_1
-  - fsspec=2025.5.1=pyhd8ed1ab_0
+  - fsspec=2025.7.0=pyhd8ed1ab_0
   - geoana=0.7.2=py312hc39e661_0
   - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.14.0=nompi_py312h3faca00_100
-  - hdf5=1.14.6=nompi_h2d575fe_101
+  - hdf5=1.14.6=nompi_h6e4c0c1_102
   - hpack=4.1.0=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - icu=75.1=he02047a_0
@@ -45,10 +45,10 @@ dependencies:
   - jinja2=3.1.6=pyhd8ed1ab_0
   - joblib=1.5.1=pyhd8ed1ab_0
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.8=py312h84d6215_0
+  - kiwisolver=1.4.8=py312h68727a3_1
   - krb5=1.21.3=h659f571_0
   - lcms2=2.17=h717163a_0
-  - ld_impl_linux-64=2.43=h1423503_5
+  - ld_impl_linux-64=2.44=h1423503_1
   - lerc=4.0.0=h0aef613_1
   - libaec=1.1.4=h3f801dc_0
   - libblas=3.9.0=32_hfdb39a5_mkl
@@ -61,7 +61,7 @@ dependencies:
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libev=4.33=hd590300_2
-  - libexpat=2.7.0=h5888daf_0
+  - libexpat=2.7.1=hecca717_0
   - libffi=3.4.6=h2dba641_1
   - libfreetype=2.13.3=ha770c72_1
   - libfreetype6=2.13.3=h48d6fc4_1
@@ -69,28 +69,28 @@ dependencies:
   - libgcc-ng=15.1.0=h69a702a_3
   - libgfortran=15.1.0=h69a702a_3
   - libgfortran5=15.1.0=hcea5267_3
-  - libhwloc=2.11.2=default_h0d58e46_1001
+  - libhwloc=2.11.2=default_h3d81e11_1002
   - libiconv=1.18=h4ce23a2_1
   - libjpeg-turbo=3.1.0=hb9d3cd8_0
   - liblapack=3.9.0=32_hc41d3b0_mkl
   - liblzma=5.8.1=hb9d3cd8_2
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hb9d3cd8_1
-  - libpng=1.6.49=h943b412_0
+  - libpng=1.6.50=h943b412_0
   - libscotch=7.0.6=hea33c07_1
   - libspatialindex=2.0.0=he02047a_0
-  - libsqlite=3.50.1=h6cd9bfd_7
+  - libsqlite=3.50.3=hee844dc_1
   - libssh2=1.11.1=hcf80075_0
   - libstdcxx=15.1.0=h8f9b012_3
   - libstdcxx-ng=15.1.0=h4852527_3
   - libtiff=4.7.0=hf01ce69_5
   - libuuid=2.38.1=h0b41bf4_0
-  - libwebp-base=1.5.0=h851e524_0
+  - libwebp-base=1.6.0=hd42ef1d_0
   - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.13.8=h4bc477f_0
   - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-openmp=20.1.7=h024ca30_0
+  - llvm-openmp=20.1.8=h4922eb0_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py312h178313f_1
   - matplotlib-base=3.8.4=py312h20ab3a6_2
@@ -104,9 +104,9 @@ dependencies:
   - numcodecs=0.15.1=py312hf9745cd_0
   - numpy=1.26.4=py312heda63a1_0
   - openjpeg=2.5.3=h5fbd93e_0
-  - openssl=3.5.0=h7b32b05_1
+  - openssl=3.5.1=h7b32b05_0
   - packaging=25.0=pyh29332c3_1
-  - pandas=2.3.0=py312hf9745cd_0
+  - pandas=2.3.1=py312hf79963d_0
   - partd=1.4.2=pyhd8ed1ab_0
   - pillow=10.3.0=py312h287a98d_1
   - pip=25.1.1=pyh8b19718_0
@@ -120,10 +120,10 @@ dependencies:
   - pyparsing=3.2.3=pyhd8ed1ab_1
   - pysocks=1.7.1=pyha55dd90_7
   - python=3.12.11=h9e4cc4f_0_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-mumps=0.0.3=py312h6ad3ee3_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.12=7_cp312
+  - python_abi=3.12=8_cp312
   - pytz=2025.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py312h178313f_2
   - readline=8.2=h8c095d6_2
@@ -131,7 +131,7 @@ dependencies:
   - scikit-learn=1.4.2=py312h1fcc3ea_1
   - scipy=1.14.1=py312h62794b6_2
   - setuptools=80.9.0=pyhff2d567_0
-  - six=1.17.0=pyhd8ed1ab_0
+  - six=1.17.0=pyhe01879c_1
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=hceb3a55_1
   - tblib=3.1.0=pyhd8ed1ab_0
@@ -141,9 +141,9 @@ dependencies:
   - tornado=6.5.1=py312h66e93f0_0
   - tqdm=4.67.1=pyhd8ed1ab_1
   - trimesh=4.1.8=pyhd8ed1ab_0
-  - typing-extensions=4.14.0=h32cad80_0
+  - typing-extensions=4.14.1=h4440ef1_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
-  - typing_extensions=4.14.0=pyhe01879c_0
+  - typing_extensions=4.14.1=pyhe01879c_0
   - tzdata=2025b=h78e105d_0
   - unicodedata2=16.0.0=py312h66e93f0_0
   - urllib3=2.5.0=pyhd8ed1ab_0
@@ -159,9 +159,9 @@ dependencies:
   - zstandard=0.23.0=py312h66e93f0_2
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ea323dc1e48634a19cca2b2693f989fae08880f1
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@99695a5e34812bfbb53cef84803033a91af137de
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@f72a1367edcb2da969002ca06f18f532340b3c27
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@c64e2db54bfdacc19ef675a7d54288aaad8b78a8
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@af2991b847a1bf42194575874fc4fb1efe1e8ab1
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@86e22e6fa457859d494d94552e6431728e513d7a
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
 
