--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -32,4 +32,4 @@ sphinx:
   fail_on_warning: false
 
 conda:
-  environment: environments/py-3.10-linux-64-dev.conda.lock.yml
+  environment: docs/environment.yml
