--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -30,4 +30,5 @@ chapters:
       sections:
         - file: case_studies/Forrestania/python_code/gravity
         - file: case_studies/Forrestania/python_code/magnetics
+        - file: case_studies/Forrestania/python_code/join_grav_mag
 - file: THIRD_PARTY_SOFTWARE
