Move files. Split regularization module

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -4,15 +4,17 @@
 format: jb-book
 root: intro
 chapters:
-- file: inversion/index
+- file: fundamentals/index
   sections:
-  - file: inversion/fundamentals
-  - file: inversion/data_misfit
-  - file: inversion/regularization
-  - file: inversion/mesh_design
-  - file: inversion/joint_inversion
-  - file: inversion/depth_of_investigation
-  - file: inversion/optimization
+  - file: fundamentals/background
+  - file: fundamentals/data_misfit
+  - file: fundamentals/regularization/regularization
+    sections:
+    - file: fundamentals/regularization/sparse
+  - file: fundamentals/mesh_design
+  - file: fundamentals/joint_inversion
+  - file: fundamentals/depth_of_investigation
+  - file: fundamentals/optimization
 - file: tutorials/introduction
   sections:
   - file: tutorials/background
@@ -22,13 +24,13 @@ chapters:
   - file: tutorials/tipper
   - file: tutorials/airborne_tem
   - file: tutorials/joint_inversion
-- file: case_studies/index
-  sections:
-  - file: case_studies/Forrestania/forrestania
-    sections:
-    - file: case_studies/Forrestania/open_code
-      sections:
-        - file: case_studies/Forrestania/python_code/gravity
-        - file: case_studies/Forrestania/python_code/magnetics
-        - file: case_studies/Forrestania/python_code/joint_grav_mag
+#- file: case_studies/index
+#  sections:
+#  - file: case_studies/Forrestania/forrestania
+#    sections:
+#    - file: case_studies/Forrestania/open_code
+#      sections:
+#        - file: case_studies/Forrestania/python_code/gravity
+#        - file: case_studies/Forrestania/python_code/magnetics
+#        - file: case_studies/Forrestania/python_code/joint_grav_mag
 - file: THIRD_PARTY_SOFTWARE
