--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -39,7 +39,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.3=pyhe01879c_0
   - contourpy=1.3.2=py310hc19bc0b_0
-  - coverage=7.10.3=py310hdb0e946_0
+  - coverage=7.10.4=py310hdb0e946_0
   - cpython=3.10.18=py310hd8ed1ab_0
   - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.1=py310ha8f682b_0
@@ -55,7 +55,7 @@ dependencies:
   - exceptiongroup=1.3.0=pyhd8ed1ab_0
   - executing=2.2.0=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.59.0=py310hdb0e946_0
+  - fonttools=4.59.1=py310hdb0e946_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.13.3=h57928b3_1
   - fsspec=2025.7.0=pyhd8ed1ab_0
@@ -96,7 +96,7 @@ dependencies:
   - jupyter_events=0.12.0=pyh29332c3_0
   - jupyter_server=2.16.0=pyhe01879c_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.4.5=pyhd8ed1ab_0
+  - jupyterlab=4.4.6=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
@@ -200,7 +200,7 @@ dependencies:
   - pytest-cov=6.2.1=pyhd8ed1ab_0
   - python=3.10.18=h8c5b53a_0_cpython
   - python-dateutil=2.9.0.post0=pyhe01879c_2
-  - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+  - python-fastjsonschema=2.21.2=pyhe01879c_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-mumps=0.0.3=py310hb64895d_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
@@ -294,11 +294,11 @@ dependencies:
   - zstandard=0.23.0=py310ha8f682b_2
   - zstd=1.5.7=hbeecb71_2
   - pip:
-    - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@1dbe97d441d65962a94e071b5c1c27d9facd2050
-    - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@570ea996ae7e48ab1b8b971b23c9c73b7f5637b2
-    - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@d0311c2528658b0dcd70d6491ba53bf7c8288946
-    - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@02fbd85bf7d54b8f4336f1f0094c1c3e27714e81
-    - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@9ed6091534d638171957a17324e1a1e8f067b434
+    - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@183ed8f654bc393eeafdf89b2c258a224f4b4b73
+    - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@cef8a1a904ab0338cd7ecb0f762db5f7a35f02e8
+    - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@2e61aceb15b21e896c6190b8426075e9a04cf78e
+    - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@111d2925130201bae952ff8692bf87663f3481ac
+    - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@cee0044fc645d73d33444cc82ce040772741dc1d
 
 variables:
   KMP_WARNINGS: 0
