--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -94,7 +94,7 @@ dependencies:
   - jupyter_client=8.6.3=pyhd8ed1ab_1
   - jupyter_core=5.8.1=pyh5737063_0
   - jupyter_events=0.12.0=pyh29332c3_0
-  - jupyter_server=2.16.0=pyhe01879c_0
+  - jupyter_server=2.17.0=pyhcf101f3_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
   - jupyterlab=4.4.6=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
@@ -169,7 +169,7 @@ dependencies:
   - openssl=3.5.2=h725018a_0
   - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=25.0=pyh29332c3_1
-  - pandas=2.3.1=py310hed136d8_0
+  - pandas=2.3.2=py310hed136d8_0
   - pandoc=3.7.0.2=h57928b3_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_1
@@ -181,7 +181,7 @@ dependencies:
   - pluggy=1.6.0=pyhd8ed1ab_0
   - prometheus_client=0.22.1=pyhd8ed1ab_0
   - prompt-toolkit=3.0.51=pyha770c72_0
-  - psutil=7.0.0=py310ha8f682b_0
+  - psutil=7.0.0=py310h29418f3_1
   - pthread-stubs=0.4=h0e40799_1002
   - pure_eval=0.2.3=pyhd8ed1ab_1
   - pybtex=0.25.1=pyhd8ed1ab_0
@@ -209,7 +209,7 @@ dependencies:
   - pywin32=311=py310h282bd7d_0
   - pywinpty=2.0.15=py310h9e98ed7_0
   - pyyaml=6.0.2=py310h38315fa_2
-  - pyzmq=27.0.1=py310h49f0f51_0
+  - pyzmq=27.0.2=py310h49f0f51_0
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_1
   - referencing=0.36.2=pyh29332c3_0
   - requests=2.32.5=pyhd8ed1ab_0
@@ -247,7 +247,7 @@ dependencies:
   - sqlalchemy=2.0.43=py310h29418f3_0
   - stack_data=0.6.3=pyhd8ed1ab_1
   - tabulate=0.9.0=pyhd8ed1ab_2
-  - tbb=2021.13.0=h18a62a1_2
+  - tbb=2021.13.0=h18a62a1_3
   - tblib=3.1.0=pyhd8ed1ab_0
   - terminado=0.18.1=pyh5737063_0
   - threadpoolctl=3.6.0=pyhecae5ae_0
@@ -261,7 +261,7 @@ dependencies:
   - tqdm=4.67.1=pyhd8ed1ab_1
   - traitlets=5.14.3=pyhd8ed1ab_1
   - trimesh=4.1.8=pyhd8ed1ab_0
-  - types-python-dateutil=2.9.0.20250809=pyhd8ed1ab_0
+  - types-python-dateutil=2.9.0.20250822=pyhd8ed1ab_0
   - typing-extensions=4.14.1=h4440ef1_0
   - typing-inspection=0.4.1=pyhd8ed1ab_0
   - typing_extensions=4.14.1=pyhe01879c_0
@@ -295,11 +295,11 @@ dependencies:
   - zstd=1.5.7=hbeecb71_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@25bf69c7afdfce5e9d4ac7d667c88790aad9c934
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@12bf67269934b26a307c69857c01dd3b4c4742e9
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@bdf223def86a077a7e3f02b631fbffd7727527f2
       - grid-apps @ git+https://github.com/MiraGeoscience/grid-apps.git@e5bc756e65c0deb2c35e9b5bad8b4572697e2f9f
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@dc256f618543d8ee94fd36737749715fe497f8b7
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@111d2925130201bae952ff8692bf87663f3481ac
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@cee0044fc645d73d33444cc82ce040772741dc1d
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@7e04880d7da72ba0fc46a2aacafa172cca010c81
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@ba132694b432f76848573964f07b791c27734879
 
 variables:
   KMP_WARNINGS: 0
