--- a/environments/py-3.11-linux-64.conda.lock.yml
+++ b/environments/py-3.11-linux-64.conda.lock.yml
@@ -105,11 +105,11 @@ dependencies:
   - openjpeg=2.5.3=h55fea9a_1
   - openssl=3.5.2=h26f9b46_0
   - packaging=25.0=pyh29332c3_1
-  - pandas=2.3.1=py311hed34c8f_0
+  - pandas=2.3.2=py311hed34c8f_0
   - partd=1.4.2=pyhd8ed1ab_0
   - pillow=10.3.0=py311h82a398c_1
   - pip=25.2=pyh8b19718_0
-  - psutil=7.0.0=py311h9ecbd09_0
+  - psutil=7.0.0=py311h49ec1c0_1
   - pthread-stubs=0.4=hb9d3cd8_1002
   - pycparser=2.22=pyh29332c3_1
   - pydantic=2.11.7=pyh3cfb1c2_0
@@ -132,7 +132,7 @@ dependencies:
   - setuptools=80.9.0=pyhff2d567_0
   - six=1.17.0=pyhe01879c_1
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
-  - tbb=2021.13.0=hb60516a_2
+  - tbb=2021.13.0=hb60516a_3
   - tblib=3.1.0=pyhd8ed1ab_0
   - threadpoolctl=3.6.0=pyhecae5ae_0
   - tk=8.6.13=noxft_hd72426e_102
@@ -159,11 +159,11 @@ dependencies:
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@25bf69c7afdfce5e9d4ac7d667c88790aad9c934
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@12bf67269934b26a307c69857c01dd3b4c4742e9
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@bdf223def86a077a7e3f02b631fbffd7727527f2
       - grid-apps @ git+https://github.com/MiraGeoscience/grid-apps.git@e5bc756e65c0deb2c35e9b5bad8b4572697e2f9f
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@dc256f618543d8ee94fd36737749715fe497f8b7
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@111d2925130201bae952ff8692bf87663f3481ac
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@cee0044fc645d73d33444cc82ce040772741dc1d
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@7e04880d7da72ba0fc46a2aacafa172cca010c81
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@ba132694b432f76848573964f07b791c27734879
 
 variables:
   KMP_WARNINGS: 0
