--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -91,7 +91,7 @@ repos:
     -   id: mixed-line-ending
         exclude: ^\.idea/.*\.xml$
     -   id: name-tests-test
-        exclude: targets.py
+        exclude: ^tests/utils/
     -   id: pretty-format-json
         args:
             - --autofix
